<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favFragment"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/favoritos_text" />
    <item
        android:id="@+id/informacion"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/informaci_n_text" />
    <item
        android:id="@+id/guias"
        android:icon="@drawable/ic_description_black_24dp"
        android:title="@string/gu_as_text" />
    <item
        android:id="@+id/configuracion"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/ajustes_text" />
    <item
        android:id="@+id/home2"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/cerrar_sesi_n_text" />
</menu>