<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pocket_knowledge_title"
            android:textAlignment="center"
            android:textColor="@color/my_black_color"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/big_gap"
            android:layout_height="@dimen/big_gap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/ic_pk" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_login_layout"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_margin"
            android:layout_marginEnd="@dimen/form_margin"
            android:hint="@string/mail_hint"
            app:boxStrokeColor="@color/my_black_color"
            app:hintTextColor="@color/my_black_color"
            app:layout_constraintBottom_toTopOf="@+id/registeredButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.24000001"
            app:startIconDrawable="@drawable/ic_mail_black_24dp"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login_layout"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_margin"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="@dimen/form_margin"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/my_black_color"
            app:hintTextColor="@color/my_black_color"
            app:layout_constraintBottom_toTopOf="@+id/registeredButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.685"
            app:startIconDrawable="@drawable/ic_lock_open_black_24dp"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvide_mi_contrase_a_text"
            android:textColor="@color/my_black_color"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.13" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="@dimen/medium_gap"
            android:background="@drawable/bordes_redondos"
            android:text="@string/ingresar_text"
            android:textColor="@color/my_white_color"
            android:textSize="@dimen/big_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login_layout"
            app:layout_constraintVertical_bias="0.050000012" />



        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empresaurios_text"
            android:textColor="@color/my_black_color"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.98" />

        <TextView
            android:id="@+id/CountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/no_tienes_cuenta"
            android:textColor="@color/my_black_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.31"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            app:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/RegisterTxt"
            android:layout_width="75dp"
            android:layout_height="21dp"
            android:layout_marginTop="17dp"
            android:text="@string/regi"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            app:layout_constraintVertical_bias="0.00999999" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>