<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LevelFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_white_color">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_text_size"
        android:fontFamily="@font/noto_sans"
        android:text="@string/selecciona_un_nivel_text"
        android:textColor="@color/my_black_color"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/basic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_gap"
        android:layout_marginTop="@dimen/margin_gap"
        android:layout_marginEnd="@dimen/margin_gap"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/noto_sans"
        android:text="@string/b_sico_text"
        android:textColor="@color/my_white_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/inter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_gap"
        android:layout_marginTop="@dimen/medium_margin_gap"
        android:layout_marginEnd="@dimen/margin_gap"
        android:layout_marginBottom="@dimen/large_margin"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/noto_sans"
        android:text="Intermedio"
        android:textColor="@color/my_white_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basic_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/hard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_gap"
        android:layout_marginTop="@dimen/medium_margin_gap"
        android:layout_marginEnd="@dimen/margin_gap"
        android:layout_marginBottom="@dimen/angle_gap"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/noto_sans"
        android:text="@string/avanzado_text"
        android:textColor="@color/my_white_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inter_button"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>